review twig escaping - add more e('html_attr') - raw filter in expressions does not work - notifWeg is already safe for html => no need for raw - no need to run raw before msg, msg is safe for html

--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -19,7 +19,7 @@
             </select>
           </div>
         {% endif %}
-        <input type='text' class='form-control' value='{{ App.Request.query.get('q') }}' name='q' id='searchUsers' placeholder='{{ 'Search for user'|trans }}' aria-label='{{ 'User name'|trans }}'>
+        <input type='text' class='form-control' value='{{ App.Request.query.get('q')|trim|e('html_attr') }}' name='q' id='searchUsers' placeholder='{{ 'Search for user'|trans }}' aria-label='{{ 'User name'|trans }}'>
         <div class='input-group-append'>
           <button class='btn btn-primary' type='submit'>{{ 'Search'|trans }}</button>
         </div>
