--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -68,13 +68,13 @@
   <div class='pl-3 mt-2'>
     <div class='d-flex justify-content-between'>
       <label for='link_name' class='col-form-label'>{{ 'Name of the link in the top menu'|trans }}</label>
-      <input class='form-control col-md-4' data-trigger='blur' data-model='teams/current' data-target='link_name' type='text' value='{{ App.teamArr.link_name }}' name='link_name' id='link_name' />
+      <input class='form-control col-md-4' data-trigger='blur' data-model='teams/current' data-target='link_name' type='text' value='{{ App.teamArr.link_name|e('html_attr') }}' name='link_name' id='link_name' />
     </div>
     <hr>
 
     <div class='d-flex justify-content-between'>
       <label for='link_href' class='col-form-label'>{{ 'Address where this link should point'|trans }}</label>
-      <input class='form-control col-md-4' type='url' data-trigger='blur' data-model='teams/current' data-target='link_href' value='{{ App.teamArr.link_href }}' name='link_href' id='link_href' />
+      <input class='form-control col-md-4' type='url' data-trigger='blur' data-model='teams/current' data-target='link_href' value='{{ App.teamArr.link_href|e('html_attr') }}' name='link_href' id='link_href' />
     </div>
     <hr>
 
@@ -134,7 +134,9 @@
     <hr>
 
     <label for='common_template_md'>{{ 'Common Experiment Template'|trans }} (Markdown)</label>
-    <textarea style='height:400px' class='markdown-textarea form-control mt-2' name='common_template_md' id='common_template_md'>{{ App.teamArr.common_template_md|raw }}</textarea>
+    <textarea style='height:400px' class='markdown-textarea form-control mt-2' name='common_template_md' id='common_template_md'>
+      {{ App.teamArr.common_template_md|raw }}
+    </textarea>
     <p class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</p>
     <div class='mt-2 text-center'>
       <button type='button' data-action='patch-team-common-template-md' class='btn btn-primary'>{{ 'Save'|trans }}</button>
@@ -221,7 +223,7 @@
 
             <li class='list-inline-item'>
               <label for='expcatName_{{ cat.id }}'>{{ 'Name'|trans }}</label>
-              <input class='form-control' required type='text' id='expcatName_{{ cat.id }}' value='{{ cat.title }}' />
+              <input class='form-control' required type='text' id='expcatName_{{ cat.id }}' value='{{ cat.title|e('html_attr') }}' />
             </li>
 
             <li class='list-inline-item col-1 align-top'>
@@ -267,7 +269,7 @@
   {% else %}
       <ul class='list-group form-group sortable' data-axis='y' data-table='items_types'>
         {% for itemType in itemsCategoryArr %}
-        <li class='box' id='itemstypes_{{ itemType.id }}' style='color: #{{ itemType.color }}'><span class='sortableHandle draggable mr-2'><i class='fas fa-grip-vertical fa-fw'></i></span><a href='?tab=4&amp;templateid={{ itemType.id }}#itemsCategoriesAnchor' aria-label='{{ 'Edit'|trans }} {{ itemType.title|escape('html_attr') }}' title='{{ 'Edit'|trans }}' class='p-2 mr-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt'></i></a>{{ itemType.title }}</li>
+        <li class='box' id='itemstypes_{{ itemType.id }}' style='color: #{{ itemType.color }}'><span class='sortableHandle draggable mr-2'><i class='fas fa-grip-vertical fa-fw'></i></span><a href='?tab=4&amp;templateid={{ itemType.id }}#itemsCategoriesAnchor' aria-label='{{ 'Edit'|trans }} {{ itemType.title|e('html_attr') }}' title='{{ 'Edit'|trans }}' class='p-2 mr-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt'></i></a>{{ itemType.title }}</li>
         {% endfor %}
       </ul>
       <p>{{ 'Use the handles to adjust the order in which the categories appear in the application.'|trans }}</p>
@@ -281,7 +283,7 @@
       <ul class='list-inline'>
         <li class='list-inline-item'>
           <label for='itemsTypesName'>{{ 'Name'|trans }}</label>
-          <input type='text' class='form-control' id='itemsTypesName' value='{{ Entity.entityData.title }}' />
+          <input type='text' class='form-control' id='itemsTypesName' value='{{ Entity.entityData.title|e('html_attr') }}' />
         </li>
 
         <li class='list-inline-item col-1 align-top'>
@@ -355,7 +357,7 @@
 
             <li class='list-inline-item'>
               <label for='statusName_{{ status.id }}'>{{ 'Name'|trans }}</label>
-              <input class='form-control' required type='text' id='statusName_{{ status.id }}' value='{{ status.title }}' />
+              <input class='form-control' required type='text' id='statusName_{{ status.id }}' value='{{ status.title|e('html_attr') }}' />
             </li>
 
             <li class='list-inline-item col-1 align-top'>
@@ -402,7 +404,7 @@
 
             <li class='list-inline-item'>
               <label for='itemsstatusName_{{ status.id }}'>{{ 'Name'|trans }}</label>
-              <input class='form-control' required type='text' id='itemsstatusName_{{ status.id }}' value='{{ status.title }}' />
+              <input class='form-control' required type='text' id='itemsstatusName_{{ status.id }}' value='{{ status.title|e('html_attr') }}' />
             </li>
 
             <li class='list-inline-item col-1 align-top'>
