--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -70,7 +70,7 @@
   <div class='d-flex mb-2 justify-content-between align-items-center'>
     <label for='title_input' class='col-form-label mr-3 edit-mode-label'>{{ 'Title'|trans }}</label>
     {# no data-trigger here because custom code in edit.ts #}
-    <input id='title_input' class='form-control' maxlength='255' type='text' value='{{ Entity.entityData.title }}' required />
+    <input id='title_input' class='form-control' maxlength='255' type='text' value='{{ Entity.entityData.title|e('html_attr') }}' required />
   </div>
 
   {# CATEGORY / STATUS #}
