--- a/src/templates/favtags-panel.html
+++ b/src/templates/favtags-panel.html
@@ -16,7 +16,7 @@
         <p>{{ 'No favorite tags are present. Add an existing tag with the form below.'|trans }}</p>
       {% endif %}
       {% for favtag in favTagsArr %}
-      <div data-action='add-tag-filter' data-tag='{{ favtag.tag|escape('html_attr') }}' class='side-panel-item {{ App.Request.query.all('tags')[0] == favtag.tag ? 'selected' : '' }}'>
+      <div data-action='add-tag-filter' data-tag='{{ favtag.tag|e('html_attr') }}' class='side-panel-item {{ App.Request.query.all('tags')[0] == favtag.tag ? 'selected' : '' }}'>
         {{ favtag.tag }}<a href='#' class='float-right mr-2' data-id='{{ favtag.tags_id }}' data-action='destroy-favtags'><i class='fas fa-trash-alt'></i></a>
       </div>
       {% endfor %}
