--- a/src/templates/show-item-table.html
+++ b/src/templates/show-item-table.html
@@ -46,14 +46,14 @@
       <i class='far fa-calendar-check mr-1'></i>
     {% endif %}
     {% if item.category %}
-      <button type='button' data-action='add-query-filter' data-key='cat' data-value='{{ item.category }}' class='btn catstat-btn category-btn lh-normal border-0' style='--bg:#{{ item.category_color }}'>{{ item.category_title }}</button>
+      <button type='button' data-action='add-query-filter' data-key='cat' data-value='{{ item.category|e('html_attr') }}' class='btn catstat-btn category-btn lh-normal border-0' style='--bg:#{{ item.category_color }}'>{{ item.category_title }}</button>
     {% endif %}
   </td>
 
   {# STATUS #}
   <td class='item-next'>
     {% if item.status %}
-      <button type='button' data-action='add-query-filter' data-key='status' data-value='{{ item.status }}' class='btn catstat-btn status-btn lh-normal border-0'><i class='fas fa-circle fa-fw' style='--bg:#{{ item.status_color }}'></i> {{ item.status_title }}</button>
+      <button type='button' data-action='add-query-filter' data-key='status' data-value='{{ item.status|e('html_attr') }}' class='btn catstat-btn status-btn lh-normal border-0'><i class='fas fa-circle fa-fw' style='--bg:#{{ item.status_color }}'></i> {{ item.status_title }}</button>
     {% endif %}
   </td>
 
