revamp mention appearance + use eLab spinner while loading data

--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -9,7 +9,7 @@
 /* loading spinner */
 .lds-dual-ring::after {
     animation: lds-dual-ring 1.3s linear infinite;
-    border: 8px solid $elabblue;
+    border: 8px solid currentColor;
     border-color: $elabblue transparent $elabblue transparent;
     border-radius: 50%;
     content: ' ';
