--- a/src/scss/_autocomplete.scss
+++ b/src/scss/_autocomplete.scss
@@ -7,83 +7,66 @@
  */
 
 .rte-autocomplete {
-    background-clip: padding-box;
-    background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 6px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     display: block;
-    float: left;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: sans-serif;
     font-size: 14px;
-    left: 0;
-    list-style: none;
-    margin: 2px 0 0;
     min-width: 160px;
-    padding: 5px 0;
-    position: absolute;
     top: 0;
     // keep this above 1200 for tinymce fullscreen mode
     // see #2401
     z-index: 1985;
-}
 
-.rte-autocomplete::before {
-    border-bottom: 7px solid rgba(0, 0, 0, 0.2);
-    border-left: 7px solid transparent;
-    border-right: 7px solid transparent;
-    content: '';
-    display: inline-block;
-    left: 9px;
-    position: absolute;
-    top: -7px;
-}
+    &::before {
+        border-bottom: 7px solid rgba(0, 0, 0, 0.2);
+        border-left: 7px solid transparent;
+        border-right: 7px solid transparent;
+        content: '';
+        display: inline-block;
+        left: 9px;
+        position: absolute;
+        top: -7px;
+    }
 
-.rte-autocomplete::after {
-    border-bottom: 6px solid #fff;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    content: '';
-    display: inline-block;
-    left: 10px;
-    position: absolute;
-    top: -6px;
-}
+    &::after {
+        border-bottom: 6px solid #fff;
+        border-left: 6px solid transparent;
+        border-right: 6px solid transparent;
+        content: '';
+        display: inline-block;
+        left: 10px;
+        position: absolute;
+        top: -6px;
+    }
 
-.rte-autocomplete > .loading {
-    background: url('images/ajax-loader.gif') center no-repeat;
-    height: 16px;
-}
+    li {
+        /* without the parent seletor (&) the css is not applied and the spinner is too big */
+        /* stylelint-disable-next-line selector-no-qualifying-type */
+        &.lds-dual-ring::after {
+              border: 4px solid currentColor;
+              border-color: $elabblue transparent $elabblue transparent;
+              height: 20px;
+              margin-left: auto;
+              margin-right: auto;
+              width: 20px;
+        }
 
-.rte-autocomplete > li > a {
-    clear: both;
-    color: #29aeb9;
-    display: block;
-    font-weight: normal;
-    line-height: 20px;
-    padding: 3px 20px;
-    text-decoration: none;
-    white-space: nowrap;
-}
+        a {
+            line-height: 20px;
+            padding: 3px 20px;
+            white-space: nowrap;
+        }
+    }
 
-.rte-autocomplete > li > a:hover,
-.rte-autocomplete > li > a:focus,
-.rte-autocomplete:hover > a,
-.rte-autocomplete:focus > a {
-    background-color: #0081c2;
-    background-image: linear-gradient(to bottom, #08c, #0077b3);
-    background-repeat: repeat-x;
-    color: #fff;
-    text-decoration: none;
-}
-
-.rte-autocomplete > .active > a,
-.rte-autocomplete > .active > a:hover,
-.rte-autocomplete > .active > a:focus {
-    background-color: #0081c2;
-    background-image: linear-gradient(to bottom, #08c, #0077b3);
-    background-repeat: repeat-x;
-    color: #fff;
-    outline: 0;
-    text-decoration: none;
+    > .active {
+        > a,
+        > a:hover,
+        > a:focus {
+            background-color: #e9ecef;
+            color: #16181b;
+            outline: 0;
+            text-decoration: none;
+        }
+    }
 }
