add missing text and aria-label attributes to input

--- a/src/templates/show-templates-select.html
+++ b/src/templates/show-templates-select.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class='input-group'>
-    <input placeholder='{{ 'Filter'|trans }}' id='templatesFilterInput' class='form-control form-inline' />
+    <input type='text' aria-label='{{ 'Filter'|trans }}' placeholder='{{ 'Filter'|trans }}' id='templatesFilterInput' class='form-control form-inline' />
     <div class='input-group-append'>
       <button data-action='clear-templates-search' class='btn btn-outline-secondary' type='button' title='{{ 'Clear'|trans }}' aria-label='{{ 'Clear'|trans }}'>
         <i class='fas fa-times fa-fw'></i>
