--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -29,8 +29,6 @@
     <img src='/assets/images/logo.png' alt='elabftw' title='elabftw' class='col-md-3' />
     <h2 class='mb-2 mt-2'>{{ 'Create your account'|trans }}</h2>
     {# Register form #}
-    {# min pass length minimum, no maximum #}
-    {% set pattern = '.{' ~ minPasswordLength() ~ ',}' %}
 
     <form method='post' autocomplete='off' action='app/controllers/RegisterController.php'>
       <input hidden type='text' name='bot' value=''>
@@ -68,7 +66,7 @@
         <div class='row mt-2'>
           <label for='password'>{{ 'Password'|trans }}</label>
           <div class='input-group'>
-            <input name='password' type='password' class='form-control' title='8 characters minimum' id='password' pattern='{{ pattern }}' autocomplete='new-password' required />
+            <input name='password' type='password' class='form-control' minlength='{{ App.Config.configArr.min_password_length }}' title='{{ 'Minimum password length: %d.'|trans|format(App.Config.configArr.min_password_length) }} {{ passwordInputHelp|e('html_attr') }}' pattern='{{ passwordInputPattern|e('html_attr') }}' id='password' autocomplete='new-password' required />
             <div class='input-group-append'>
               <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='password'><i class='fas fa-eye' aria-hidden='true'></i></span>
             </div>
