--- a/src/templates/change-pass.html
+++ b/src/templates/change-pass.html
@@ -6,20 +6,17 @@
   <form method='post' class='form-group' action='app/controllers/ResetPasswordController.php'>
     {{ App.Session.get('csrf')|csrf }}
 
-    <p class='smallgray'>{{ minPasswordLength() }} {{ 'characters minimum'|trans }}</p>
+    <p class='smallgray'>{{ App.Config.configArr.min_password_length }} {{ 'characters minimum'|trans }}</p>
     {# output the key and userid as hidden fields #}
     <input type='hidden' name='key' value='{{ key }}' />
     <input type='hidden' name='userid' value='{{ userid }}' />
-
-    {# min pass length minimum, no maximum #}
-    {% set pattern = '.{' ~ minPasswordLength() ~ ',}' %}
 
     <div class='row'>
       <div class='col-md-4'></div>
       <div class='form-group col-md-4'>
         <label for='password'>{{ 'New password'|trans }}</label>
         <div class='input-group'>
-          <input class='form-control' id='password' type='password' autocomplete='new-password' pattern='{{ pattern }}' value='' name='password' required />
+          <input class='form-control' minlength='{{ App.Config.configArr.min_password_length }}' title='{{ 'Minimum password length: %d.'|trans|format(App.Config.configArr.min_password_length) }} {{ passwordInputHelp|e('html_attr') }}' id='password' name='password' type='password' pattern='{{ passwordInputPattern|e('html_attr') }}' autocomplete='new-password' required />
           <div class='input-group-append'>
             <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='password'><i class='fas fa-eye' aria-hidden='true'></i></span>
           </div>
