--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -282,7 +282,7 @@
       <div class='d-flex justify-content-between'>
         <label for='password' class='col-form-label'>{{ 'Modify your password'|trans }}</label>
         <div class='input-group col-md-3 px-0'>
-          <input class='form-control' id='password' name='password' type='password' pattern='.{8,}' autocomplete='new-password' />
+          <input class='form-control' minlength='{{ App.Config.configArr.min_password_length }}' title='{{ 'Minimum password length: %d.'|trans|format(App.Config.configArr.min_password_length) }} {{ passwordInputHelp|e('html_attr') }}' id='password' name='password' type='password' pattern='{{ passwordInputPattern|e('html_attr') }}' autocomplete='new-password' />
           <div class='input-group-append'>
             <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='password'><i class='fas fa-eye' aria-hidden='true'></i></span>
           </div>
