--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -80,7 +80,7 @@
       {% if not searchPage %}
         <input type='hidden' name='q' value='{{ DisplayParams.query|e('html_attr') }}' />
       {% endif %}
-      {% if DisplayParams.searchType == 'related' %}
+      {% if DisplayParams.searchType == constant('Elabftw\\Enums\\SearchType::Related') %}
         <input type='hidden' name='related' value='{{ App.Request.query.get('related')|number_format }}' />
       {% endif %}
 
@@ -171,7 +171,7 @@
 
   <div id='showModeContent'>
 
-  {% if count == 0 and searchType != '' %}
+  {% if count == 0 and searchType != constant('Elabftw\\Enums\\SearchType::Undefined') %}
     <div class='row display-flex' id='itemList'>
       {% set otherPage = Entity.type == 'experiments' ? 'database' : 'experiments' %}
       {% set otherCategory = Entity.type == 'experiments' ? 'items' : 'experiments' %}
@@ -182,7 +182,7 @@
         <button class='btn btn-primary' type='button'>{{ 'Search in %s'|trans|format(otherCategory) }}</button>
       </a>
     </div>
-  {% elseif count == 0 and searchType == '' and not App.Session.get('is_anon') and not App.Request.query.get('offset') %}
+  {% elseif count == 0 and searchType == constant('Elabftw\\Enums\\SearchType::Undefined') and not App.Session.get('is_anon') and not App.Request.query.get('offset') %}
     <div class='row display-flex' id='itemList'>
       {{ "Welcome to eLabFTW. Use the 'Create new' button to get started!"|trans|msg('ok', false) }}
     </div>
