--- a/src/templates/permissions-edit-modal.html
+++ b/src/templates/permissions-edit-modal.html
@@ -43,7 +43,7 @@
             {% endfor %}
           </select>
           {# TEAMS #}
-          <label for='{{ identifier }}_select_teams'>{{ 'Teams'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
+          <label for='{{ identifier }}_select_teams' class='mt-2'>+ {{ 'Teams'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
           <p class='smallgray'>{{ 'Selecting a team here will give access to all members of this team.'|trans }}</p>
           <select id='{{ identifier }}_select_teams' multiple class='form-control' autocomplete='off'>
             {% for team in teamsArr|filter(t => t.visible == '1') %}
@@ -53,7 +53,7 @@
             {% endfor %}
           </select>
           {# TEAMGROUPS #}
-          <label for='{{ identifier }}_select_teamgroups'>{{ 'Teamgroups'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
+          <label for='{{ identifier }}_select_teamgroups' class='mt-2'>+ {{ 'Teamgroups'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
           <p class='smallgray'>{{ 'Selecting a teamgroup here will give access to all users part of this teamgroup.'|trans }}</p>
           <select {{ allTeamgroupsArr|length == 0 ? 'disabled' }} id='{{ identifier }}_select_teamgroups' multiple class='form-control' autocomplete='off'>
             {% for tg in allTeamgroupsArr %}
@@ -63,7 +63,7 @@
             {% endfor %}
           </select>
           {# USERS #}
-          <label for='{{ identifier }}_select_users'>{{ 'Users'|trans }}</label> <p class='smallgray d-inline'>{{ 'Allow individual users to access this entry.'|trans }}</p>
+          <label for='{{ identifier }}_select_users' class='mt-2'>+ {{ 'Users'|trans }}</label> <p class='smallgray d-inline'>{{ 'Allow individual users to access this entry.'|trans }}</p>
           <ul class='list-group mb-1' id='{{ identifier }}_list_users'>
             {% set humanCan = permissionsJson|canToHuman %}
             {% for user in humanCan.users %}
