information has usually no plural in english

--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -270,7 +270,7 @@
       </div>
     </div>
 
-    <h2 class='p-2 pl-3 section-title'>{{ 'Personal informations'|trans }}</h2>
+    <h2 class='p-2 pl-3 section-title'>{% trans %}Personal information{% plural 2 %}Personal information{% endtrans %}</h2>
     <div class='pl-3 mt-2 mb-5'>
 
       <div class='d-flex justify-content-between'>
