--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -138,7 +138,7 @@
     <label for='common_template_md'>{{ 'Common Experiment Template'|trans }} (Markdown)</label>
     <div>
       {% if App.Config.configArr.debug -%}
-        <!-- [html-validate-disable-block text-content: suppress errors from tinymce] -->
+        <!-- [html-validate-disable-block text-content, no-unused-disable: suppress errors from tinymce] -->
       {%- endif %}
       <textarea style='height:400px' class='markdown-textarea form-control mt-2' name='common_template_md' id='common_template_md'>
         {{ App.teamArr.common_template_md|raw }}
