Add extra fields to search syntax (#4731)
* wip

* no need for null

* update search syntax manual

* rework metadata query

* add extafield test

* fix test

* add rule for stric operator

* change extrafield doc

* add todo: search in all extra fields

* jslint

* fix typo

* only include metadata column if needed

* add/remove tests

* wip: remove old code

* wip: add metadata field helper

* fix query highlighting

* query can now be used to search for metadata

* add metadata helper, remove old metadata eventListener

* add ** wildcard for metadata key

* update documentation for metadata search syntax

* remove useless br elements

* update extrafield search helper and rearrange search helpers a bit

* update search unit test

* jslint use singlequote

* phpcs

* fix regex error

* don't convert special characters to HTML entities for metadata as this is json

* add type to getQuotes parameter

* allow escaped quotes in quoted terms

* non capturing group to character class

* wip

* add autocomplete to extra fields key

* reformat EntitySqlBuilder->getCanFilter()

* add autocomplete for extra fields name to JSON dialogue

* make autocomplete case-insensitive

* cast frequency to int, teams_id is int

* add extra_fileds_keys endpoint to API documentation

* add ComparisonOperators rule to search grammar

* use formatted search error message

* some refactoring

* no more height for tinymce textarea, html-validate

* update/improve/add cypress html-validate tests

* add cypress test for ucp

* fix some html-validate error

* fix duplicate div id='info' on teams->templates page

* more aria-label

* fix escape double quotes

* wait for pages to load aka loading-spinner to disappear

* add select picker for extra fields keys select on search page
add limit to ExtraFieldsKeys class
update api doc
refactor getFilterValueFromElement in search.ts

* fix missed closing

--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -56,7 +56,8 @@
 
             {# NAME #}
             <label for='newFieldKeyInput' class='required-label'>{{ 'Name'|trans }} <span class='smallgray'>({{ 'required'|trans }})</span></label>
-            <input type='text' autocomplete='off' required placeholder='{{ 'Name'|trans }}' id='newFieldKeyInput' class='form-control'>
+            <input type='text' autocomplete='off' data-autocomplete='extraFieldsKeys' required placeholder='{{ 'Name'|trans }}' id='newFieldKeyInput' class='form-control'>
+            <div id='autocompleteAnchorDiv_extra_fields_keys'></div>
 
             {# DESCRIPTION #}
             <label for='newFieldDescriptionInput'>{{ 'Description'|trans }}</label>
