--- a/src/templates/search-syntax-doc-modal.html
+++ b/src/templates/search-syntax-doc-modal.html
@@ -19,6 +19,7 @@
               <code><span class='token operator'>!</span></code>,
               <code><span class='token punctuation'>(</span></code>,
               <code><span class='token punctuation'>)</span></code>,
+              <code><span class='token punctuation'>:</span></code>,
               <code><span class='token string'>'</span></code> and
               <code><span class='token string'>"</span></code>.<br>
               <em><code><span class='token string'>termA</span></code></em> or
@@ -115,6 +116,12 @@
           <dd><a href='#dateFormats'>See accepted date formats below</a></dd>
           <dt><span class='token keyword'>elabid</span></dt>
           <dd>Term or Quoted term</dd>
+          <dt><span class='token keyword'>extrafield</span></dt>
+          <dd>Uses a different syntax: <span class='token keyword'>extrafield</span><span class='token punctuation'>:</span><span class='token keyword'>s</span><span class='token punctuation'>:</span><span class='token string'>key</span><span class='token punctuation'>:</span><span class='token string'>value</span> (<span class='token keyword'>s</span><span class='token punctuation'>:</span> is optional and only affects <span class='token string'>value</span>).
+            <br><span class='token string'>key</span> (Name of field) and <span class='token string'>value</span> (search term) can be a Term or Quoted term.
+            <br><span class='token string'>key</span> has to be an exact match, hence there are no wildcards. However, two asterisks (<span class='token string'>**</span>) can be use to search absolutely all fields.
+            <br><span class='token string'>value</span> can use wildcards as described above.
+          </dd>
           <dt><span class='token keyword'>group</span></dt>
           <dd>Term or Quoted term</dd>
           <dt><span class='token keyword'>id</span></dt>
