--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -32,7 +32,7 @@
 
 <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='false'><i class='fas fa-caret-right fa-fw mr-2'></i>{{ 'Help'|trans }}</h3>
 <div class='mt-2' hidden data-save-hidden='advancedSearchHelpDiv'>
-  <p>{{ 'Allowed Fields'|trans }} (<code><span class='token keyword'>{{ 'field'|trans }}</span><span class='token punctuation'>:</span><span class='token string'> {{ 'value'|trans }}</span></code>):</p>
+  <p>{{ 'Allowed Fields'|trans }} (<code><span class='token keyword'>{{ 'field'|trans }}</span><span class='token punctuation'>:</span><span class='token string'>{{ 'value'|trans }}</span></code>):</p>
   <div class='row'>
     <div class='col-md-6'>
       <ul class='list-unstyled'>
@@ -43,6 +43,7 @@
         <li class='mb-2'><kbd>custom_id:</kbd> {{ 'number'|trans }}</li>
         <li class='mb-2'><kbd>date:</kbd> {{ 'see date format'|trans }}</li>
         <li class='mb-2'><kbd>elabid:</kbd> {{ 'simple or quoted term'|trans }}</li>
+        <li class='mb-2'><kbd>extrafield:key:value</kbd> {{ 'simple or quoted term'|trans }}</li>
       </ul>
     </div>
 
@@ -152,8 +153,8 @@
 {# NEW ROW #}
 <div class='row mb-2'>
   {# AUTHOR/OWNER HELPER #}
-  <div class='col-md-4'>
-    <label for='searchonly'>{{ 'And author is'|trans }}/{{ 'belongs to group:'|trans }}</label><br>
+  <div class='col-md-5'>
+    <label for='searchonly'>{{ 'And author is'|trans }}/{{ 'belongs to group:'|trans }}</label>
     {% if App.Config.configArr.debug -%}
       <!-- [html-validate-disable-block element-permitted-content: suppress error from select picker: div child of button] -->
     {%- endif %}
@@ -175,7 +176,7 @@
 
   {# VISIBILITY SEARCH #}
   <div class='col-md-4'>
-    <label for='visibility'>{{ 'And visibility is:'|trans }} </label><br>
+    <label for='visibility'>{{ 'And visibility is:'|trans }} </label>
     <select id='visibility' name='vis' data-filter='visibility' class='form-control filterHelper'>
       <option value='' data-action='clear'>{{ 'Select visibility'|trans }}</option>
       {% for value in visibilityArr %}
@@ -184,12 +185,9 @@
     </select>
   </div>
   {# END VISIBILITY SEARCH #}
-</div>
 
-{# NEW ROW #}
-<div class='row mb-2'>
   {# RATING #}
-  <div class='col-md-6'>
+  <div class='col-md-3'>
     <label for='rating'>{{ 'And rating is'|trans }}</label>
     <select id='rating' name='rating' data-filter='rating' class='form-control filterHelper'>
       <option value='' data-action='clear'>{{ 'Select number of stars'|trans }}</option>
@@ -200,8 +198,52 @@
     </select>
   </div>
   {# END RATING #}
+</div>
+
+{# NEW ROW #}
+<div class='row mb-2'>
+  {# METADATA SEARCH #}
+  <div class='col-md-5'>
+    <span class='d-inline-block mb-2'>{{ 'And extra field is'|trans }}</span>
+    <div class='input-group flex-nowrap'>
+      {% if App.Config.configArr.debug -%}
+        <!-- [html-validate-disable-block element-permitted-content: suppress error from select picker: div child of button] -->
+      {%- endif %}
+      <select
+        aria-label='{{ 'Name of field'|trans }}'
+        class='form-control filterHelper selectpicker'
+        data-filter='extrafield'
+        data-live-search='true'
+        data-style=''
+        data-style-base='form-control filterHelper'
+        id='metakey'
+        name='metakey'
+        title='{{ 'Name of field'|trans }}'
+      >
+        <option value='**' {{- '**' == App.Request.query.get('metakey') ? ' selected' }}>{{ 'All fields'|trans }}</option>
+        {% for metakey in metakeyArrForSelect %}
+          <option value='{{ metakey }}' {{- metakey == App.Request.query.get('metakey') ? ' selected' }}>{{ metakey|raw }}</option>
+        {% endfor %}
+      </select>
+      <div class='input-group-text px-1 brl-none brr-none' style='margin-left:-1px;margin-right:-1px;'>:</div>
+      <input
+        aria-label='{{ 'Value'|trans }}'
+        class='form-control filterHelper'
+        data-filter='extrafield'
+        id='metavalue'
+        name='metavalue'
+        placeholder='{{ 'Value'|trans }}'
+        type='text'
+        value='{{ Request.query.get('metavalue') != '' ? Request.query.get('metavalue') }}'
+      />
+    </div>
+    <div id='autocompleteAnchorDiv_extra_fields_keys'></div>
+    <p class='mt-1 text-muted'>{{ "Tip: you can use '%' as wildcard in value"|trans }}</p>
+  </div>
+  {# METADATA SEARCH END #}
+
   {# LOCK #}
-  <div class='col-md-3'>
+  <div class='col-md-4'>
     <label for='locked'>{{ 'Locked'|trans }}</label>
     <select id='locked' name='locked' class='form-control filterHelper' data-filter='locked'>
       <option value='' data-action='clear'>{{ 'Select lock status'|trans }}</option>
@@ -221,31 +263,6 @@
     </select>
   </div>
   {# END LOCK #}
-</div>
-
-<hr>
-{# METADATA SEARCH #}
-<h4 data-action='toggle-next' class='d-inline togglable-section-title mt-3 mb-2' tabindex='0' role='button' aria-expanded='false'><i class='fas fa-caret-right fa-fw mr-2'></i>{{ 'Extra fields search'|trans }}</h4>
-<div hidden data-save-hidden='metadataSearchDiv'>
-  {# add as many extra fields as present in the query but at least one #}
-  {% for metakey in (Request.query.all('metakey') ?: ['']) %}
-    {% set metavalue = Request.query.all('metavalue')[loop.index0] %}
-    <div class='row' {{- loop.first ? " id='metadataFirstInputs'" }}>
-      <div class='col-md-4'>
-        {% set randomid = random() %}
-        <label for='metakey_{{ randomid }}'>{{ 'Name of field'|trans }}</label>
-        <input type='text' id='metakey_{{ randomid }}' class='form-control' name='metakey[]' value='{{ metakey != '' ? metakey }}' />
-      </div>
-      <div class='col-md-4'>
-        <label for='metavalue_{{ randomid }}'>{{ 'Value'|trans }}</label>
-        <input type='text' id='metavalue_{{ randomid }}' class='form-control' name='metavalue[]' value='{{ metavalue != '' ? metavalue }}' />
-        <p>{{ "Tip: you can use '%' as wildcard"|trans }}</p>
-      </div>
-    </div>
-  {% endfor %}
-
-  {# button to add an extra field input #}
-  <div data-action='add-extra-fields-search-inputs'><i class='fas fa-plus-circle fa-2x'></i></div>
 </div>
 
 {# Search action buttons #}
