myteams -> myteam to clarify what a user can expect

--- a/src/templates/search-syntax-doc-modal.html
+++ b/src/templates/search-syntax-doc-modal.html
@@ -164,7 +164,7 @@
               {# A group name (e.g., <span class='token string'>'Lab Heroes'</span>) or #}
               <span class='token string'>public</span>,
               <span class='token string'>organization</span>,
-              <span class='token string'>myteams</span>,
+              <span class='token string'>myteam</span>,
               <span class='token string'>user</span>, or
               <span class='token string'>useronly</span>.
           </dd>
