--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -74,13 +74,16 @@
   {% include('edit-permissions.html') %}
 
   {# SHOW EVENTS #}
-  {% if Entity.entityData.events_start %}<i class='far fa-calendar-alt'></i>
-    {% for event in Entity.entityData.events_start|split('|') %}
-    <a href='team.php?item={{ Entity.id }}&amp;start={{ event|url_encode }}'>
-      <button type='button' class='m-1 btn btn-neutral relative-moment' title='{{ event|date('Y-m-d H:i:s') }}' aria-label='{{ event|date('Y-m-d H:i:s') }}'></button>
-    </a>
-    {% endfor %}
+  {% if Entity.entityData.events_start %}
+    <div class='mb-2'>
+      <i class='far fa-fw fa-calendar-alt'></i>
+      {% for event in Entity.entityData.events_start|split('|') %}
+        <a href='team.php?item={{ Entity.id }}&amp;start={{ event|url_encode }}' class='mx-1 btn btn-neutral relative-moment'  title='{{ event|date('Y-m-d H:i:s') }}' aria-label='{{ event|date('Y-m-d H:i:s') }}'></a>
+      {% endfor %}
+    </div>
+    <hr>
   {% endif %}
+
 
   {# SHOW NEXT STEP #}
   {% set next_step = Entity.entityData.next_step %}
