bugfix: prevent issue displaying experiment when filesize is null
to trigger this bug, an old uploaded file must be attached, and the
upload visualisation mode must be table (not default)
adding a default filter prevents issue.
Sysadmins should run bin/console uploads:check.

--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -87,7 +87,7 @@
               {# CREATED AT #}
               <td><span class='relative-moment' title='{{ upload.created_at }}'></span></td>
               {# FILESIZE #}
-              <td>{{ upload.filesize|formatBytes }}</td>
+              <td>{{ upload.filesize|default('0')|formatBytes }}</td>
               {# ACTIONS #}
               <td>
                 {% if loop.first %}
