--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1230,8 +1230,10 @@ input[type='color'] {
 
 /* to make the pie smaller */
 .pie-chart-container {
-    max-width: 450px;
-    padding: 66px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 360px;
+    padding: 5%;
 }
 
 /* pure css pie chart based on: https://codepen.io/chriscoyier/pen/RPLqMg */
